feat: add library cloud transform defaults (CP-64)
